[explore] indexation mgmt layout issue

--- a/code/client/src/styles/_explore.scss
+++ b/code/client/src/styles/_explore.scss
@@ -184,8 +184,4 @@ main {
   // align child vertically
   display: flex;
   align-items: center;
-  // make sure that child like progress bar takes all available space
-  * {
-    width: 100%;
-  }
 }
